src/tests/integer_infix_expression/snapshots/monkey_interpreter__tests__integer_infix_expression__test_integer_infix_expression_case_10_environment.snap
---
source: src/tests/integer_infix_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {},
            enclosing: None,
        },
    },
}
