src/tests/integer_infix_expression/snapshots/monkey_interpreter__tests__integer_infix_expression__test_integer_infix_expression_case_10_syntax_analysis.snap
---
source: src/tests/integer_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Infix {
            left_hand: Prefix {
                prefix: Minus,
                right_hand: Integer {
                    literal: 3,
                },
            },
            operator: Minus,
            right_hand: Prefix {
                prefix: Minus,
                right_hand: Integer {
                    literal: 3,
                },
            },
        },
    },
]
