src/tests/integer_infix_expression/snapshots/monkey_interpreter__tests__integer_infix_expression__test_integer_infix_expression_case_11_evaluation.snap
---
source: src/tests/integer_infix_expression/mod.rs
expression: evaluation
---
Integer {
    value: -37,
}
