src/tests/integer_infix_expression/snapshots/monkey_interpreter__tests__integer_infix_expression__test_integer_infix_expression_case_11_lexical_analysis.snap
---
source: src/tests/integer_infix_expression/mod.rs
assertion_line: 25
expression: tokens
---
[
    PositionedToken {
        token: Integer {
            literal: 37,
        },
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Multiply,
        position: Position {
            line: 1,
            column: 4,
        },
    },
    PositionedToken {
        token: Minus,
        position: Position {
            line: 1,
            column: 6,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 1,
        },
        position: Position {
            line: 1,
            column: 7,
        },
    },
]
