src/tests/integer_infix_expression/snapshots/monkey_interpreter__tests__integer_infix_expression__test_integer_infix_expression_case_11_syntax_analysis.snap
---
source: src/tests/integer_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: MultiplyInfix {
            left_hand: Integer {
                literal: 37,
            },
            right_hand: MinusPrefix {
                right_hand: Integer {
                    literal: 1,
                },
            },
        },
    },
]
