src/tests/integer_infix_expression/snapshots/monkey_interpreter__tests__integer_infix_expression__test_integer_infix_expression_case_12_syntax_analysis.snap
---
source: src/tests/integer_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: PlusInfix {
            left_hand: PlusInfix {
                left_hand: Integer {
                    literal: 5,
                },
                right_hand: Integer {
                    literal: 5,
                },
            },
            right_hand: Integer {
                literal: 10,
            },
        },
    },
]
